--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="relative z-10 text-center text-white px-4 w-full max-w-5xl mx-auto mt-16">
             <p class="text-teal-300 font-bold tracking-widest text-sm md:text-lg mb-4 uppercase hero-subtitle">
-                Welcome to Paradise
+                Welcome to Kites Of Wayanad
             </p>
             <h1 class="text-4xl md:text-7xl font-extrabold mb-6 hero-title leading-tight drop-shadow-lg">
                 "Where Nature Whispers <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-300 to-green-400">& Adventure Calls"</span>
