--- a/packages.html
+++ b/packages.html
@@ -36,13 +36,17 @@
     <!-- Packages Content -->
     <section class="py-16 px-6">
         <div class="container mx-auto">
+            
+            <!-- ========================================= -->
+            <!-- PACKAGE 1: 4-DAY EXCLUSIVE ITINERARY      -->
+            <!-- ========================================= -->
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-gray-900">Exclusive 4-Day Itinerary</h2>
                 <p class="text-gray-600 mt-4">A carefully curated journey through the best of Wayanad.</p>
                 <div class="w-24 h-1 bg-teal-500 mx-auto mt-4"></div>
             </div>
 
-            <!-- Day 1 (Fixed: Removed opacity-0) -->
+            <!-- Day 1 -->
             <div class="package-card flex flex-col md:flex-row items-center gap-10 mb-20">
                 <div class="w-full md:w-1/2 h-64 md:h-[400px] rounded-2xl overflow-hidden shadow-lg group">
                     <img src="lakkidi.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
@@ -60,7 +64,7 @@
                 </div>
             </div>
 
-            <!-- Day 2 (Fixed: Removed opacity-0) -->
+            <!-- Day 2 -->
             <div class="package-card flex flex-col md:flex-row-reverse items-center gap-10 mb-20">
                 <div class="w-full md:w-1/2 h-64 md:h-[400px] rounded-2xl overflow-hidden shadow-lg group">
                     <img src="900kandi.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
@@ -77,7 +81,7 @@
                 </div>
             </div>
 
-            <!-- Day 3 (Fixed: Removed opacity-0) -->
+            <!-- Day 3 -->
             <div class="package-card flex flex-col md:flex-row items-center gap-10 mb-20">
                 <div class="w-full md:w-1/2 h-64 md:h-[400px] rounded-2xl overflow-hidden shadow-lg group">
                     <img src="edakkalcaves.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
@@ -94,8 +98,8 @@
                 </div>
             </div>
 
-            <!-- Day 4 (Fixed: Removed opacity-0) -->
-            <div class="package-card flex flex-col md:flex-row-reverse items-center gap-10">
+            <!-- Day 4 -->
+            <div class="package-card flex flex-col md:flex-row-reverse items-center gap-10 mb-32">
                 <div class="w-full md:w-1/2 h-64 md:h-[400px] rounded-2xl overflow-hidden shadow-lg group">
                     <img src="kurumbalakotta.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
                 </div>
@@ -110,34 +114,79 @@
                     </ul>
                 </div>
             </div>
-        </div>
-    </section>
 
-    <!-- Trip Essentials (Included/Excluded) -->
-    <section class="py-16 bg-teal-50">
-        <div class="container mx-auto px-6">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-                <div class="bg-white p-8 rounded-xl shadow-md">
-                    <h3 class="text-2xl font-bold text-teal-700 mb-6"><i class="fas fa-thumbs-up mr-2"></i> What's Included</h3>
-                    <ul class="space-y-3 text-gray-600">
-                        <li><i class="fas fa-check text-green-500 mr-2"></i> Pick-up and Drop-off services</li>
-                        <li><i class="fas fa-check text-green-500 mr-2"></i> Professional Driver/Guide</li>
-                        <li><i class="fas fa-check text-green-500 mr-2"></i> Parking & Toll Charges</li>
-                        <li><i class="fas fa-check text-green-500 mr-2"></i> Sightseeing as per itinerary</li>
-                    </ul>
+            <!-- ========================================= -->
+            <!-- PACKAGE 2: 3-DAY WAYANAD-COORG COMBO      -->
+            <!-- ========================================= -->
+            <div class="text-center mb-16 pt-10 border-t border-gray-200">
+                <h2 class="text-4xl font-bold text-gray-900">Wayanad & Coorg Fusion (3 Days)</h2>
+                <p class="text-gray-600 mt-4">The perfect blend of Kerala's hills and the Scotland of India.</p>
+                <div class="w-24 h-1 bg-teal-500 mx-auto mt-4"></div>
+            </div>
+
+            <!-- New Package Day 1 -->
+            <div class="package-card flex flex-col md:flex-row items-center gap-10 mb-20">
+                <div class="w-full md:w-1/2 h-64 md:h-[400px] rounded-2xl overflow-hidden shadow-lg group">
+                    <!-- Placeholder: Ensure you have an image for Pookode or resort -->
+                    <img src="pookode.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
                 </div>
-                <div class="bg-white p-8 rounded-xl shadow-md">
-                    <h3 class="text-2xl font-bold text-red-500 mb-6"><i class="fas fa-thumbs-down mr-2"></i> What's Excluded</h3>
-                    <ul class="space-y-3 text-gray-600">
-                        <li><i class="fas fa-times text-red-500 mr-2"></i> Entry Tickets for Attractions</li>
-                        <li><i class="fas fa-times text-red-500 mr-2"></i> Food & Beverages</li>
-                        <li><i class="fas fa-times text-red-500 mr-2"></i> Activity Charges (Zip Line, etc.)</li>
-                        <li><i class="fas fa-times text-red-500 mr-2"></i> Personal Expenses</li>
+                <div class="w-full md:w-1/2">
+                    <span class="bg-teal-100 text-teal-800 px-4 py-1 rounded-full text-sm font-bold">Day 01</span>
+                    <h3 class="text-3xl font-bold mt-4 mb-4 text-gray-800">Arrival & Adventure</h3>
+                    <ul class="space-y-3 text-gray-700 text-lg">
+                        <li class="flex items-center"><i class="fas fa-car text-teal-500 mr-3"></i>Pickup from Calicut & Resort Check-in</li>
+                        <li class="flex items-center"><i class="fas fa-check-circle text-teal-500 mr-3"></i>En Ooru Tribal Heritage Village</li>
+                        <li class="flex items-center"><i class="fas fa-check-circle text-teal-500 mr-3"></i>Pookode Lake (Boating)</li>
+                        <li class="flex items-center"><i class="fas fa-bolt text-yellow-500 mr-3"></i>Adventure Activities <span class="text-xs text-orange-600 bg-orange-100 px-2 rounded ml-2 font-bold">Extra Cost</span></li>
+                        <li class="pl-9 text-sm text-gray-500 italic mb-2">(Zipline, Bungee Jumping, Giant Swing)</li>
+                        <li class="flex items-center"><i class="fas fa-moon text-teal-500 mr-3"></i>Dinner & Overnight Stay</li>
                     </ul>
                 </div>
             </div>
+
+            <!-- New Package Day 2 -->
+            <div class="package-card flex flex-col md:flex-row-reverse items-center gap-10 mb-20">
+                <div class="w-full md:w-1/2 h-64 md:h-[400px] rounded-2xl overflow-hidden shadow-lg group">
+                    <!-- Placeholder: Reuse Edakkal image or new scenic one -->
+                    <img src="edakkalcaves.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
+                </div>
+                <div class="w-full md:w-1/2">
+                    <span class="bg-teal-100 text-teal-800 px-4 py-1 rounded-full text-sm font-bold">Day 02</span>
+                    <h3 class="text-3xl font-bold mt-4 mb-4 text-gray-800">Wayanad to Coorg</h3>
+                    <ul class="space-y-3 text-gray-700 text-lg">
+                        <li class="flex items-center"><i class="fas fa-check-circle text-teal-500 mr-3"></i>Karapuzha Dam Photo Stop</li>
+                        <li class="flex items-center"><i class="fas fa-hiking text-teal-500 mr-3"></i>Edakkal Caves (Prehistoric Trek)</li>
+                        <li class="flex items-center"><i class="fas fa-utensils text-teal-500 mr-3"></i>Lunch En Route</li>
+                        <li class="flex items-center"><i class="fas fa-route text-teal-500 mr-3"></i>Scenic Drive to Coorg</li>
+                        <li class="flex items-center"><i class="fas fa-bed text-teal-500 mr-3"></i>Check-in & Dinner in Coorg</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- New Package Day 3 -->
+            <div class="package-card flex flex-col md:flex-row items-center gap-10 mb-20">
+                <div class="w-full md:w-1/2 h-64 md:h-[400px] rounded-2xl overflow-hidden shadow-lg group">
+                    <!-- IMPORTANT: Add an image named 'goldentemple.jpg' to your folder -->
+                    <img src="harangi.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110" alt="Golden Temple Coorg">
+                </div>
+                <div class="w-full md:w-1/2">
+                    <span class="bg-teal-100 text-teal-800 px-4 py-1 rounded-full text-sm font-bold">Day 03</span>
+                    <h3 class="text-3xl font-bold mt-4 mb-4 text-gray-800">The Coorg Experience</h3>
+                    <ul class="space-y-3 text-gray-700 text-lg">
+                        <li class="flex items-center"><i class="fas fa-tree text-teal-500 mr-3"></i>Bamboo Forest Drive</li>
+                        <li class="flex items-center"><i class="fas fa-elephant text-teal-500 mr-3"></i>Dubare Elephant Camp</li>
+                        <li class="flex items-center"><i class="fas fa-om text-teal-500 mr-3"></i>Namdroling Monastery (Golden Temple)</li>
+                        <li class="flex items-center"><i class="fas fa-water text-teal-500 mr-3"></i>Harangi Dam View</li>
+                        <li class="flex items-center"><i class="fas fa-car-side text-teal-500 mr-3"></i>Drop-off at Calicut</li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
     </section>
+
+
+  
 
     <!-- Footer -->
     <footer class="bg-gray-900 text-gray-400 py-10 text-center"><p>&copy; 2025 Kites Of Wayanad.</p></footer>
