--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                 <div class="bg-teal-800 p-8 rounded-2xl shadow-xl text-left">
                     <div class="flex text-yellow-400 mb-4"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                     <p class="italic mb-6">"The 900 Kandi glass bridge experience was breathtaking! Kites team managed everything perfectly."</p>
-                    <h4 class="font-bold">- Rahul Sharma, Bangalore</h4>
+                    <h4 class="font-bold">- Mirshad, Kasaragod</h4>
                 </div>
                 <div class="bg-teal-800 p-8 rounded-2xl shadow-xl text-left">
                     <div class="flex text-yellow-400 mb-4"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                     <p class="italic mb-6">"A perfect family getaway. The homestay arrangements and food were authentic and lovely."</p>
-                    <h4 class="font-bold">- Anjali Menon, Kochi</h4>
+                    <h4 class="font-bold">- Ajmal, Kochi</h4>
                 </div>
             </div>
         </div>
